RESOLVED FIXED22383
Worker tests spill error messages over to consequent tests
https://bugs.webkit.org/show_bug.cgi?id=22383
Summary Worker tests spill error messages over to consequent tests
Alexey Proskuryakov
Reported 2008-11-20 07:04:47 PST
As seen on buildbots.
Attachments
proposed fix (1.94 KB, patch)
2008-11-20 07:08 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2008-11-20 07:08:33 PST
Created attachment 25313 [details] proposed fix
Darin Adler
Comment 2 2008-11-20 09:31:46 PST
Comment on attachment 25313 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2008-11-20 10:19:16 PST
Committed revision 38623.
Note You need to log in before you can comment on or make changes to this bug.