        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=22383
        Worker tests spill error messages over to consequent tests

        * dom/Worker.cpp: (WebCore::Worker::Worker):
        Raise an exception immediately if URL is empty. Dcoument::completeURL() returns document URL
        in this case, and there is no sense in starting a thread and trying to parse document source
        as JavaScript.

        * bindings/js/JSWorkerConstructor.cpp: (WebCore::constructWorker):
        Return quickly if toString() raised an exception.



Canonical link: https://commits.webkit.org/30832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38623 268f45cc-cd09-0410-ab3c-d52691b4dbfc